tinyxml_SOURCES = \
	tinyxml/tinystr.cpp \
	tinyxml/tinyxml.cpp \
	tinyxml/tinyxmlerror.cpp \
	tinyxml/tinyxmlparser.cpp \
	tinyxml/tinystr.h \
	tinyxml/tinyxml.h

bin_PROGRAMS = blobby

blobby_SOURCES = \
	DuelMatch.h DuelMatch.cpp \
	main.cpp \
	InputSource.h InputSource.cpp \
	LocalInputSource.h \
	InputManager.h InputManager.cpp \
	GUIManager.h GUIManager.cpp \
	NetworkPacket.h \
	NetworkManager.h NetworkManager.cpp \
	NetworkServer.h NetworkServer.cpp \
	NetworkClient.h NetworkClient.cpp \
	PhysicWorld.h PhysicWorld.cpp \
	RenderManager.h RenderManager.cpp \
	RenderManagerSDL.h RenderManagerSDL.cpp \
	RenderManagerGP2X.h RenderManagerGP2X.cpp \
	RenderManagerGL2D.h RenderManagerGL2D.cpp \
	ReplayInputSource.h ReplayInputSource.cpp \
	ReplayRecorder.h ReplayRecorder.cpp \
	State.h State.cpp\
	SoundManager.h SoundManager.cpp \
	Vector.h \
	UserConfig.cpp UserConfig.h \
	$(tinyxml_SOURCES)
